Finish Ansible Configuration

--- a/metal/roles/setup/templates/sasl_passwd.j2
+++ b/metal/roles/setup/templates/sasl_passwd.j2
@@ -1,1 +1,1 @@
-[smtp.gmail.com]:587    grigriserver@gmail.com:{{ lookup('passwordstore', 'grigri/smtp') }}
+[smtp.gmail.com]:587    serverdabol@gmail.com:{{ lookup('passwordstore', 'k8s.dabol/smtp') }}
